# Data-Structures-and-algorithms

L3_Dictionar_Andrei/Proiect C++/: App.cpp  CMakeLists.txt  DO.cpp  DO.h  Iterator.cpp  Iterator.h  TestExtins.cpp  TestScurt.cpp  TestScurt.h
L4_Colectie_Andrei/: App.cpp  CMakeLists.txt  Colectie.cpp  Colectie.h  IteratorColectie.cpp  IteratorColectie.h  TestExtins.cpp  TestScurt.cpp
L6/: App.cpp  Dictionar.cpp  Dictionar.h  IteratorDictionar.cpp  IteratorDictionar.h  TestExtins.cpp  TestScurt.cpp
L7 heap/: App.cpp  CMakeLists.txt  Matrice.cpp  Matrice.h  TestExtins.cpp  TestScurt.cpp  TestScurt.h
